# wibble

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  SECURITY.md  maintainernotes.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: check.yml  dependabot-auto-merge.yml
.windsurf/workflows/: modernize-python-package.md
src/wibble/: __init__.py  __main__.py  warble.py  wibble.py  wobble.py
tests/: test_command.py
