[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wibble"
authors = ["Joe Schmoe"]
description = "Minimal python project that exposes a commandline feature"
readme = "README.md"
version = "0.0.4"
keywords = ["example"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage="https://github.com/retospect/wibble"

[tool.poetry.scripts]
# fafa: cmd; wibble: package; wobble: .py; warble: method
fafa = "wibble.wobble:wobble"

[tool.bumpver]
current_version = "0.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/wibble/__init__.py" = ["{version}"]

