[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wibble"
version = "1.0.0"
description = "Minimal python project that exposes a commandline feature"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [{ name = "Joe Schmoe" }]
keywords = ["example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/retospect/wibble"
Repository = "https://github.com/retospect/wibble"

[project.scripts]
# fafa: cmd; wibble: package; wobble: .py; warble: method
fafa = "wibble.wobble:wobble"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
